second_comit_from_home

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/assets/css/responsive.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -120,11 +123,12 @@
             </div>
         </section>
 
-        
+
         <section class="section4">
             <h4>the package</h4>
             <h1>Our Services</h1>
-            <p>We work on different latest techonologies in Web-Developement <br> and Mobile applications development.</p>
+            <p>We work on different latest techonologies in Web-Developement <br> and Mobile applications development.
+            </p>
             <div class="sec4_grid">
                 <div class="sec4_box" data-aos="fade-up">
                     <img src="/assets/images/wordpress.png" alt="">
@@ -134,7 +138,8 @@
                 <div class="sec4_box">
                     <img src="/assets/images/wordpress.png" alt="">
                     <h2>Graphic Designing</h2>
-                    <p>Defining the requirements, visualizing and creating graphics including illustrations, logos, layouts and photos</p>
+                    <p>Defining the requirements, visualizing and creating graphics including illustrations, logos,
+                        layouts and photos</p>
                 </div>
                 <div class="sec4_box" data-aos="fade-up">
                     <img src="/assets/images/wordpress.png" alt="">
@@ -175,6 +180,34 @@
         </section>
 
 
+
+        <section class="section5">
+
+
+
+            <div class="sec5_main">
+
+                <div class="sec5_left">
+                    <div class="sec5_left-sub">
+                        <h1 class="sec5_fact">the fact</h1>
+
+                        <h1 class="sec5_why1">Why Choose Codify?</h1>
+
+                        <p class="sec5_why2">Why choose us!</p>
+
+                        <a class="sec5_button">Watch Our Video </a>
+                    </div>
+
+                </div>
+                <div class="sec5_right_images">
+
+                    <img class="sec5_image1" src="/assets/images/iphone-3 (2).webp" alt="">
+                    <img class="sec5_image2" src="/assets/images/iphone-2 (1).webp" alt="">
+                </div>
+
+
+            </div>
+        </section>
 
     </div>
 
