--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
             </p>
             <div class="sec4_grid">
                 <div class="sec4_box" data-aos="fade-up">
-                    <img src="/assets/images/wordpress.png" alt="">
+                    <img src="/assets/images/responsive.png" alt="">
                     <h2>Web Development</h2>
                     <p>Websites developed are always fully-responsive, and cross browser compatible.</p>
                 </div>
                 <div class="sec4_box">
-                    <img src="/assets/images/wordpress.png" alt="">
+                    <img src="/assets/images/brush-line.png" alt="">
                     <h2>Graphic Designing</h2>
                     <p>Defining the requirements, visualizing and creating graphics including illustrations, logos,
                         layouts and photos</p>
@@ -208,6 +208,122 @@
 
             </div>
         </section>
+
+
+
+
+
+        <section class="section6">
+            <h4>the package</h4>
+            <h1>Our Services</h1>
+            <p>We work on different latest techonologies in Web-Developement <br> and Mobile applications development.
+            </p>
+            <div class="sec6_grid">
+                <div class="sec6_box" data-aos="fade-up">
+                    <img src="/assets/images/customer-service-line.png" alt="">
+                    <h2>24/7 Support</h2>
+                    <p>Websites developed are always fully-responsive, and cross browser compatible</p>
+                </div>
+                <div class="sec6_box">
+                    <img src="/assets/images/newspaper-line.png" alt="">
+                    <h2>Documentation</h2>
+                    <p>We do provide documentation wherever it is required and is requested by the client</p>
+                </div>
+                <div class="sec6_box" data-aos="fade-up">
+                    <img src="/assets/images/stack-fill.png" alt="">
+                    <h2>Future Updates</h2>
+                    <p>Experts available for any future update in the design, content or the working of your app.</p>
+                </div>
+                <div class="sec6_box">
+                    <img src="/assets/images//heart-2-line.png" alt="">
+                    <h2>Hybrid Apps</h2>
+                    <p>We do develope hybrid apps using React Native, Flutter and Xamarin.</p>
+                </div>
+                <div class="sec6_box" data-aos="fade-up">
+                    <img src="assets/images/command-line.png" alt="">
+                    <h2>Cross-Platform</h2>
+                    <p>Websites developed are always fully-responsive, and cross browser compatible.</p>
+                </div>
+                <div class="sec6_box">
+                    <img src="/assets/images/group-line.png" alt="">
+                    <h2>User Friendly</h2>
+                    <p>Apps and websites developed are always user-friendly and attractive in designs.</p>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="section7">
+
+
+            <div class="sec7_main">
+
+
+                <div class="sec7_left_text">
+
+                    <div class="test_left">
+                        <div class="sec7_text" data-aos="fade-right" data-aos-offset="200" data-aos-duration="500">
+                            <h1 class="sec7_text_h1">Completed Projects</h1>
+                            <h2 class="sec7_text_h2">300+</h2>
+                            <p class="sec7_text_p">Customer satisfaction is our first priority!</p>
+                        </div>
+
+                        <div class="sec7_text2" data-aos="fade-right" data-aos-offset="200" data-aos-duration="500">
+                            <h1 class="sec7_text_h1">Completed Projects</h1>
+                            <h2 class="sec7_text_h2">300+</h2>
+                            <p class="sec7_text_p">Customer satisfaction is our first priority!</p>
+                        </div>
+                        <div class="sec7_text3" data-aos="fade-right" data-aos-offset="200" data-aos-duration="500">
+                            <h1 class="sec7_text_h1">Completed Projects</h1>
+                            <h2 class="sec7_text_h2">300+</h2>
+                            <p class="sec7_text_p">Customer satisfaction is our first priority!</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="sec7_middle_image">
+                    <img class="sec7_image1" src="/assets/images/iphone-11.webp" alt="">
+
+                    <img class="sec7_image2" src="/assets/images/iphone-12.webp" alt="" data-aos="fade-down"
+                        data-aos-offset="200">
+                </div>
+
+                <div class="sec7_right_text">
+
+                    <div class="test_right">
+
+
+                        <div class="sec7_text" data-aos="fade-left" data-aos-offset="200" data-aos-duration="500">
+                            <h1 class="sec7_text_h1">Completed Projects</h1>
+                            <h2 class="sec7_text_h2">300+</h2>
+                            <p class="sec7_text_p">Customer satisfaction is our first priority!</p>
+                        </div>
+
+                        <div class="sec7_text2" data-aos="fade-left" data-aos-offset="200" data-aos-duration="500">
+                            <h1 class="sec7_text_h1">Completed Projects</h1>
+                            <h2 class="sec7_text_h2">300+</h2>
+                            <p class="sec7_text_p">Customer satisfaction is our first priority!</p>
+                        </div>
+                        <div class="sec7_text3" data-aos="fade-left" data-aos-offset="200" data-aos-duration="500">
+                            <h1 class="sec7_text_h1">Completed Projects</h1>
+                            <h2 class="sec7_text_h2">300+</h2>
+                            <p class="sec7_text_p">Customer satisfaction is our first priority!</p>
+                        </div>
+
+
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
+
+        </section>
+
 
     </div>
 
