--- a/index.html
+++ b/index.html
@@ -325,6 +325,102 @@
         </section>
 
 
+
+        <section class="section8">
+
+            <h1 class="sec8_h"> OUR TEAM</h1>
+
+
+
+            <div class="sec8_div">
+                <div class="sec8_sub">
+                    <img class="sec8_border_image" src="/assets/images/team/team-shape (1).png" alt="">
+                    <div class="sec8_image">
+                        <img class="sec8_team_member" src="/assets/images/team/usama-munir (1).webp" alt="">
+                    </div>
+
+                    <h1 class="sec8_center_text">Usama Munir</h1>
+                    <p class="sec8_center_text">Senior Developer & CEO</p>
+                </div>
+            </div>
+
+            <div class="sec8_div">
+                <div class="sec8_sub">
+                    <img class="sec8_border_image" src="/assets/images/team/team-shape (1).png" alt="">
+                    <div class="sec8_image">
+                        <img class="sec8_team_member" src="/assets/images/team/huzaifa-munir.webp" alt="">
+                    </div>
+
+                    <h1 class="sec8_center_text">Huzaifa Munir</h1>
+                    <p class="sec8_center_text">Senior Developer</p>
+                </div>
+                <div class="sec8_sub">
+                    <img class="sec8_border_image" src="/assets/images/team/team-shape (1).png" alt="">
+                    <div class="sec8_image">
+                        <img class="sec8_team_member" src="/assets/images/team/zaid-munir.webp" alt="">
+                    </div>
+
+                    <h1 class="sec8_center_text">Zaid Munir</h1>
+                    <p class="sec8_center_text">Senior Full-Stack Developer</p>
+                </div>
+
+
+            </div>
+
+
+            <div class="sec8_div">
+
+                <div class="sec8_sub">
+                    <img class="sec8_border_image" src="/assets/images/team/team-shape (1).png" alt="">
+                    <div class="sec8_image">
+                        <img class="sec8_team_member" src="/assets/images/team/umair-younas-2.webp" alt="">
+                    </div>
+
+                    <h1 class="sec8_center_text">Umair Younis</h1>
+                    <p class="sec8_center_text">UI UX Designer</p>
+                </div>
+                <div class="sec8_sub">
+                    <img class="sec8_border_image" src="/assets/images/team/team-shape (1).png" alt="">
+                    <div class="sec8_image">
+                        <img class="sec8_team_member" src="/assets/images/team/faizan.webp" alt="">
+                    </div>
+
+                    <h1 class="sec8_center_text">Faizan Ali</h1>
+                    <p class="sec8_center_text">Front-End Developer</p>
+                </div>
+
+                <div class="sec8_sub">
+                    <img class="sec8_border_image" src="/assets/images/team/team-shape (1).png" alt="">
+                    <div class="sec8_image">
+                        <img class="sec8_team_member" src="/assets/images/team/ali-hassan.webp" alt="">
+                    </div>
+
+                    <h1 class="sec8_center_text">Ali Hassan</h1>
+                    <p class="sec8_center_text">React Native Developer</p>
+                </div>
+                <div class="sec8_sub">
+                    <img class="sec8_border_image" src="/assets/images/team/team-shape (1).png" alt="">
+                    <div class="sec8_image">
+                        <img class="sec8_team_member" src="/assets/images/team/hamza.webp" alt="">
+                    </div>
+
+                    <h1 class="sec8_center_text">Hamza Tariq</h1>
+                    <p class="sec8_center_text">Junior React Js Developer</p>
+                </div>
+
+                <div class="sec8_sub">
+                    <img class="sec8_border_image" src="/assets/images/team/team-shape (1).png" alt="">
+                    <div class="sec8_image">
+                        <img class="sec8_team_member" src="/assets/images/team/haider.webp" alt="">
+                    </div>
+
+                    <h1 class="sec8_center_text">Haider Ali</h1>
+                    <p class="sec8_center_text">Junior React Js Developer</p>
+                </div>
+            </div>
+        </section>
+
+
     </div>
 
 
