--- a/index.html
+++ b/index.html
@@ -421,6 +421,51 @@
         </section>
 
 
+
+        <section class="section9">
+
+
+            <div class="sec9_main">
+
+                <div class="sec_left">
+
+                    <p class="sec9_contact">contact now</p>
+                    <h1 class="sec9_heading">Hurry up, get your quotation!</h1>
+
+
+                    <form class="sec9_form" action="">
+
+                        <input class="sec9_form_sub" type="text" name="name" placeholder="Name" size="10" required="">
+
+                        <br>
+
+
+                        <input class="sec9_form_sub" type="email" name="email" placeholder="Email" size="10" required="">
+
+                        <br>
+
+
+                        <input class="sec9_form_sub" type="text" name="cell" size="10" placeholder="Cell No" required="">
+
+                        <br>
+
+                        <textarea class="another"  name="msg" rows="8" cols="70" placeholder="What Do You Want To Ask?" required=""></textarea>
+
+
+                        <br>
+                        <button class="sec9_form_btn" type="submit" name="button">Contact Now 
+                            <i class=""> </i> </button>
+
+                    </form>
+                </div>
+                <p class="sec9_para">Want to apply for a 
+                    <a href="">job</a> or <a href="">internship</a>?
+                </p>
+            </div>
+
+            
+        </section>
+
     </div>
 
 
