today's Last Commit

--- a/index.html
+++ b/index.html
@@ -440,30 +440,33 @@
                         <br>
 
 
-                        <input class="sec9_form_sub" type="email" name="email" placeholder="Email" size="10" required="">
+                        <input class="sec9_form_sub" type="email" name="email" placeholder="Email" size="10"
+                            required="">
 
                         <br>
 
 
-                        <input class="sec9_form_sub" type="text" name="cell" size="10" placeholder="Cell No" required="">
+                        <input class="sec9_form_sub" type="text" name="cell" size="10" placeholder="Cell No"
+                            required="">
 
                         <br>
 
-                        <textarea class="another"  name="msg" rows="8" cols="70" placeholder="What Do You Want To Ask?" required=""></textarea>
+                        <textarea class="another" name="msg" rows="8" cols="70" placeholder="What Do You Want To Ask?"
+                            required=""></textarea>
 
 
                         <br>
-                        <button class="sec9_form_btn" type="submit" name="button">Contact Now 
+                        <button class="sec9_form_btn" type="submit" name="button">Contact Now
                             <i class=""> </i> </button>
 
                     </form>
                 </div>
-                <p class="sec9_para">Want to apply for a 
+                <p class="sec9_para">Want to apply for a
                     <a href="">job</a> or <a href="">internship</a>?
                 </p>
             </div>
 
-            
+
         </section>
 
     </div>
