--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -469,7 +472,91 @@
 
         </section>
 
+
+
+
+
+
+
     </div>
+
+
+
+    <section class="section10">
+        <footer class="footer">
+
+            <div class="sec10_div1">
+                <img class="sec10_logo" src="/assets/images/logo.webp" alt="">
+            </div>
+            <div class="sec10_div2">
+
+
+                <div class="sec10_div1_1">
+
+
+                    <h1 class="sec10_h1">Get your Bussiness Ideas Implemented in latest techonologies!!</h1>
+                </div>
+                <div class="sec10_div1_2">
+
+
+                    <a class="a" href="#">Apply for Job</a>
+
+                    <br>
+                    <a class="a" href="#">Apply for Internship</a>
+
+                    <br>
+                    <a class="a" href="#">Contact Us</a>
+
+                </div>
+                <div class="sec10_div1_3">
+
+
+                    <a class="a" href="mailto:info@codify.pk">info@codify.pk</a>
+                    <br>
+                    <a class="a" href="tel:+92518467825"> +92-51-84 67 825</a>
+                    <br>
+                    <span>
+                        <a href="https://www.facebook.com/codify.pk" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                    </span>
+                    <span> <a href="https://www.instagram.com/codify.pk/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
+                    </span>
+                    <a href="https://www.linkedin.com/in/codify-pk-616027203/" target="_blank"><i
+                            class="fab fa-linkedin-in"></i></a>
+
+                    </span>
+
+                </div>
+                <div class="sec10_div1_4">
+
+
+                    <a class="a" href="" target="_blank"><i class="fas fa-map-marked-alt"></i> <span> Codify, First
+                            Floor,
+                            <br> Midway Mall, Satellite Town, <br>
+                            Rawalpindi, Punjab 46000 </span></a>
+                </div>
+            </div>
+
+            <div class="sec10_div3">
+
+
+                <div class="sec10_left">
+
+
+                    <h1 >Copyright © 2021 <a href="https://codify.pk/">Codify ®</a> | Registered With
+                         </h1>
+                        <div><img src="/assets/images/secp.png" style="width:50px" alt="secp"></div>
+                </div>
+
+                <div class="sec10_right">
+
+
+                    <h1 >Codify (PVT) Limited </h1>
+                </div>
+            </div>
+        </footer>
+    </section>
 
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
